--- a/Client/launcher.html
+++ b/Client/launcher.html
@@ -4,17 +4,19 @@
     <script src="/vendor/json-patch-duplex.js"></script>
     <script src="/vendor/puppet.js"></script>
     <script src="/vendor/platform/platform.js"></script>
-
+    <script src="/vendor/polymer/polymer.js"></script>
+    
     <link rel="import" href="/vendor/x-html.html">
+    <link rel="import" href="/vendor/sortable-flexbox-list_sortableBody/tomalec-sortable-list.html">
 
     <link rel="stylesheet" href="/css/style.css">
 </head>
 
-<body>
+<body is="tomalec-sortable-list">
     <template id="root" bind>
         <template bind="{{workspace.appThumbnails.0}}">
           <!-- enecto -->
-          <article><input value="{{firstName}}!!"></article>
+          <article>First Name: <input value="{{firstName}}!!"></article>
         </template>
 
         <template bind="{{workspace.appThumbnails.1}}">
