fix the patch path

--- a/Client/launcher.html
+++ b/Client/launcher.html
@@ -16,7 +16,7 @@
     <template id="root" bind>
         <template bind="{{workspace.appThumbnails.0}}">
           <!-- enecto -->
-          <article>First Name: <input value="{{firstName}}!!"></article>
+          <article>First Name: <input value="{{firstName$}}"></article>
         </template>
 
         <template bind="{{workspace.appThumbnails.1}}">
