bind call$ to the Skype button (still no handler on the server side but at least the patch is delivered)

--- a/Client/launcher.html
+++ b/Client/launcher.html
@@ -21,7 +21,7 @@
 
         <template bind="{{workspace.appThumbnails.1}}">
           <!-- skype -->
-          <div><button>{{title}}</button></div>
+          <div><button onclick="this.model.call$ = null" value="{{call$}}">{{title}}</button></div>
         </template>
     </template>
    <script>
