--- a/Client/LauncherTemplate.html
+++ b/Client/LauncherTemplate.html
@@ -4,19 +4,24 @@
     <script src="/vendor/json-patch-duplex.js"></script>
     <script src="/vendor/puppet.js"></script>
     <script src="/vendor/platform/platform.js"></script>
+    <script src="/vendor/polymer/polymer.js"></script>
 
     <link rel="import" href="/vendor/x-html.html">
+    <link rel="import" href="/vendor/sortable-flexbox-list_sortableBody/tomalec-sortable-list.html">
 
     <link rel="stylesheet" href="/css/style.css">
 </head>
 
-<body>
+<body is="tomalec-sortable-list">
     <template id="root" bind>
         @AppsHtml@       
     </template>
    <script>
        var puppet = new Puppet(null, function (obj) {
-           document.getElementById("root").model = obj;
+           var rootTemplate = document.getElementById("root");
+           rootTemplate.bindingDelegate = new PolymerExpressions;
+           debugger;
+           rootTemplate.model = obj;
        });
    </script>
 </body>
