Launcher and Store for changes in x-html and PuppetJs

--- a/Client/LauncherTemplate.html
+++ b/Client/LauncherTemplate.html
@@ -4,7 +4,8 @@
     <script src="/vendor/fast-json-patch/src/json-patch-duplex.js"></script>
     <script src="/vendor/PuppetJs/src/puppet.js"></script>
     <script src="/vendor/platform/platform.js"></script>
-    <script src="/vendor/polymer/polymer.js"></script>
+    
+    <link rel="import" href="/vendor/polymer/polymer.html">
 
     <link rel="import" href="/vendor/x-html/x-html.html">
     <link rel="import" href="/vendor/tomalec-sortable-list/elements/tomalec-sortable-list.html">
