SocietyObjects integration (reproduces issue https://github.com/Starcounter/Starcounter/issues/1672 -- fails if you start both dummyCRM and Store app in Solution startup)

--- a/Apps/dummyCRM/Client/person.html
+++ b/Apps/dummyCRM/Client/person.html
@@ -67,11 +67,11 @@
 
     <polymer-ui-toolbar flex>
         <polymer-ui-icon icon="account" title="dummyCRM-icon"></polymer-ui-icon>
-        <h2>{{DisplayName}}</h2>
+        <h2>{{FullName}}</h2>
         <polymer-ui-icon-button icon="trash" bind="{{Delete$}}" onclick="setModelValue(this)" value="null"></polymer-ui-icon-button>
     </polymer-ui-toolbar>
     <form>
         <input type="text" placeholder="FirstName" value="{{FirstName$}}">
-        <input type="text" placeholder="LastName" value="{{LastName$}}">
+        <input type="text" placeholder="Surname" value="{{Surname$}}">
     </form>
 </section>
