Small cleanup for Map project, and debugging leftover

--- a/Client/LauncherTemplate.html
+++ b/Client/LauncherTemplate.html
@@ -25,7 +25,7 @@
     <pj-dashboard>
     <polymer-ui-field class="align-center">
         <label>Toggle sorting </label>
-        <polymer-ui-toggle-button id="toggleSortable" offcaption="Locked" oncaption="Sorting">pleple</polymer-ui-toggle-button>
+        <polymer-ui-toggle-button id="toggleSortable" offcaption="Locked" oncaption="Sorting"></polymer-ui-toggle-button>
     </polymer-ui-field>
     <tomalec-sortable-list disabled>
         <template id="root" bind>
