Make Email editable + tiny layout change

--- a/Apps/dummyCRM/Client/person.html
+++ b/Apps/dummyCRM/Client/person.html
@@ -32,6 +32,10 @@
             align-content: space-around;
             align-items: center;
             padding: 0 0.2em;
+            min-width: 16em;
+        }
+        .personHeader polymer-ui-icon {
+            margin: 0 8px;
         }
         /* Form */
         form{
