Add master.html to make http://127.0.0.1:8080/skyper/skype-user/albert work

--- a/Apps/Skype/Client/skyper-user.html
+++ b/Apps/Skype/Client/skyper-user.html
@@ -9,7 +9,7 @@
 <!-- Importing Custom Element -->
 <link rel="import" href="/vendor/skype-button/src/skype-button.html">
     <h1>{{ Name }}</h1>
-    <input value=""{{ SkypeId }}" >
+    <input value="{{ SkypeId }}" >
     <skype-button style="width:25%; background-color:#0094ff"
       participants="{{ SkypeId }}"
       imageSize="24"
