Skyper app cleanup + note x-html bug in comment

--- a/Apps/Skype/Client/skyper.html
+++ b/Apps/Skype/Client/skyper.html
@@ -7,10 +7,10 @@
     <script src="https://rawgithub.com/Starcounter-Jack/JSON-Patch/master/src/json-patch-duplex.js"></script>
     <script src="https://rawgithub.com/PuppetJs/PuppetJs/master/src/puppet.js"></script>
     <script src="https://rawgithub.com/Polymer/platform/master/platform.js"></script>
-
-    
-    <script type="text/javascript" src="http://cdn.dev.skype.com/uri/skype-uri.js"></script>
     <link rel="import" href="/vendor/x-html/x-html.html">
+
+    <!-- FIXME: `<script>` tag in included in partial used by `<x-html>` does not load --> 
+    <script type="text/javascript" src="http://cdn.dev.skype.com/uri/skype-uri.js"></script>
 </head>
 <body>
     <template bind id="root">
