Cast sub pages (ContactPage), to get proper output in JSON.

--- a/Apps/Skype/Client/skyper.html
+++ b/Apps/Skype/Client/skyper.html
@@ -14,7 +14,8 @@
 </head>
 <body>
     <template bind id="root">
-        <h1>Hello, My Only Friend!</h1>
+        <h1>Skyper</h1>
+        <h2>Hello, My Only Friend!</h2>
         <template bind="{{MyOnlyFriend}}">
             <x-html content="{{Html}}" flex></x-html>
         </template>
