--- a/Apps/dummyCRM/Client/dummyCRM.html
+++ b/Apps/dummyCRM/Client/dummyCRM.html
@@ -3,7 +3,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>Skyper App</title>
+    <title>Dummy CRM</title>
     <script src="https://rawgithub.com/Starcounter-Jack/JSON-Patch/master/src/json-patch-duplex.js"></script>
     <script src="https://rawgithub.com/PuppetJs/PuppetJs/master/src/puppet.js"></script>
     <script src="https://rawgithub.com/Polymer/platform/master/platform.js"></script>
