Updated examples for JSON and HTML output

--- a/mergedHTMLexample.html
+++ b/mergedHTMLexample.html
@@ -1,4 +1,4 @@
-<!-- URL: /merged//skyper-user.html+/contact.html -->
+<!-- URL: /polyjuice-merger?Skyper=/skyper-user.html&SuperCRM=/contact.html -->
 
 <template bind="{{SuperCRM}}">
 <!-- /contact.html -->
