Nicer search and dashboard brick for Map app + static-openstreetmap hotfix

--- a/Client/LauncherTemplate.html
+++ b/Client/LauncherTemplate.html
@@ -29,7 +29,7 @@
           <polymer-ui-toggle-button id="toggleSortable" offcaption="Locked" oncaption="Sorting"></polymer-ui-toggle-button>
       </polymer-ui-field>
       <tomalec-sortable-list disabled>
-        <template bind="{{ workspace }}">
+        <template bind="{{ results }}">
            <x-html content="{{ Html }}"></x-html>   
         </template>
       </tomalec-sortable-list>
