--- a/Apps/Skype/Client/skyper-user.html
+++ b/Apps/Skype/Client/skyper-user.html
@@ -8,10 +8,10 @@
 <script type="text/javascript" src="http://cdn.dev.skype.com/uri/skype-uri.js"></script>
 <!-- Importing Custom Element -->
 <link rel="import" href="/vendor/skype-button/src/skype-button.html">
-    <h1>{{ Name }}</h1>
-    <input value="{{ SkypeId }}" >
+    <h1>{{ Name$ }}</h1>
+    <input value="{{ SkypeId$ }}" >
     <skype-button style="width:25%; background-color:#0094ff"
-      participants="{{ SkypeId }}"
+      participants="{{ SkypeId$ }}"
       imageSize="24"
       imageColor="white"
       listParticipants="true"></skype-button>
