--- a/Apps/dummyCRM/Client/company.html
+++ b/Apps/dummyCRM/Client/company.html
@@ -13,9 +13,9 @@
 </style>
 
 <div class="company">
-    <h1><input value="{{ Name }}"></h1>
+    <h1><input value="{{ Name$ }}"></h1>
     <label>Revenue
-      <input type="number" value="{{ Revenue }}">
+      <input type="number" value="{{ Revenue$ }}">
     </label>
     <div class="contacts">
        <template repeat="{{ Contacts }}">
