New welBehaved partial design

--- a/Apps/Map/Client/dashboard.html
+++ b/Apps/Map/Client/dashboard.html
@@ -4,9 +4,11 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/polymer/0.1.4/polymer.js"></script>
 -->
 <!-- Importing Custom Element -->
+<template bind="{{Map}}">
 <div>
 	<link rel="import" href="/vendor/static-openstreetmap/src/static-openstreetmap.html">
 
 	<h4>Map</h4>
 	<static-openstreetmap lat="{{ Longitude$ }}" lng="{{ Latitude$ }}" width="64" height="64" zoom="{{ Zoom$ }}"></static-openstreetmap>
 </div>
+</template>
