--- a/Apps/dummyCRM/Client/contact.html
+++ b/Apps/dummyCRM/Client/contact.html
@@ -1,4 +1,6 @@
-<div class="contact">
-    <h1><input value="{{ Name$ }}"></h1>
-    <label>Title <input value="{{ Title$ }}"></label>
-</div>
+<template bind="{{dummyCRM}}">
+	<div class="contact">
+	    <h1><input value="{{ Name$ }}"></h1>
+	    <label>Title <input value="{{ Title$ }}"></label>
+	</div>
+</template>
