--- a/Apps/Map/Client/mapPage.html
+++ b/Apps/Map/Client/mapPage.html
@@ -4,6 +4,7 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/polymer/0.1.4/polymer.js"></script>
 -->
 <!-- Importing Custom Element -->
+<template bind="{{Map}}">
 <div>
 	<link rel="import" href="/vendor/static-openstreetmap/src/static-openstreetmap.html">
 
@@ -14,3 +15,4 @@
 	</div>
 	<static-openstreetmap query="{{ Address$ }}" width="400" height="400" zoom="{{ Zoom$ }}"></static-openstreetmap>
 </div>
+</template>
