--- a/Apps/Skype/Client/skyper-dashboard.html
+++ b/Apps/Skype/Client/skyper-dashboard.html
@@ -1,4 +1,3 @@
-<section>
 <!-- Importing Web Component's Polyfill -->
 <!-- 
 <script src="//cdnjs.cloudflare.com/ajax/libs/polymer/0.1.4/platform.js"></script>
@@ -8,9 +7,13 @@
 <script type="text/javascript" src="http://cdn.dev.skype.com/uri/skype-uri.js"></script>
 <!-- Importing Custom Element -->
 <link rel="import" href="/vendor/skype-button/src/skype-button.html">
+
+<template bind="{{Skype}}">
+<section>
     <h4>Skyper</h4>
     <skype-button style="background-color:#0094ff"
       participants="call"
       imageSize="24"
       imageColor="white"></skype-button>
 </section>
+</template>
