--- a/Apps/dummyCRM/Client/dummyCRM.html
+++ b/Apps/dummyCRM/Client/dummyCRM.html
@@ -7,7 +7,7 @@
     <script src="https://rawgithub.com/Starcounter-Jack/JSON-Patch/master/src/json-patch-duplex.js"></script>
     <script src="https://rawgithub.com/Polymer/platform/master/platform.js"></script>
     <script src="https://rawgithub.com/PuppetJs/PuppetJs/master/src/puppet.js"></script>
-    <link rel="import" href="/vendor/x-html/x-html.html">
+    <link rel="import" href="/vendor/imported-template/imported-template.html">
 
 </head>
 <body>
@@ -15,7 +15,7 @@
         <h1>DummyCRM</h1>
         <h2>Favorite Customer:</h2>
         <template bind="{{FavoriteCustomer}}">
-            <template is="xhtml" content="{{Html}}" flex></template>
+            <template is="imported-template" content="{{Html}}" flex></template>
         </template>
     </template>
     <script>
