"Do nothing" link to reproduce JSON Patch problem https://github.com/Starcounter/Starcounter/issues/1811

--- a/Client/LauncherTemplate.html
+++ b/Client/LauncherTemplate.html
@@ -25,6 +25,7 @@
   <template id="root" bind>
     <pj-dashboard search="{{ searchBar.query$ }}">
       <polymer-ui-field class="align-center">
+          <a href="/do-nothing">Do nothing</a>
           <label>Toggle sorting </label>
           <polymer-ui-toggle-button id="toggleSortable" offcaption="Locked" oncaption="Sorting"></polymer-ui-toggle-button>
       </polymer-ui-field>
