display dummyCRM templates correctly

--- a/Apps/dummyCRM/Client/dummyCRM.html
+++ b/Apps/dummyCRM/Client/dummyCRM.html
@@ -1,4 +1,4 @@
-<template bind>
+<template bind="{{dummyCRM}}">
     <h1>DummyCRM</h1>
     <h2>Favorite Customer:</h2>
     <template bind="{{FavoriteCustomer}}">
