--- a/Client/LauncherTemplate.html
+++ b/Client/LauncherTemplate.html
@@ -24,6 +24,13 @@
 <body>
   <template id="root" bind>
     <pj-dashboard search="{{ searchBar.query$ }}">
+      <div id="menu">
+          <ul>
+              <template bind="{{ menu }}">
+                  <template is="imported-template" content="{{ Html }}"></template>
+              </template>
+          </ul>
+      </div>
       <polymer-ui-field class="align-center">
           <a href="/do-nothing">Do nothing</a>
           <label>Toggle sorting </label>
