rename dummyCRM=>SuperCRM, Skype=>Skyper (templates, static files)

--- a/Apps/Skyper/Client/skyper-dashboard.html
+++ b/Apps/Skyper/Client/skyper-dashboard.html
@@ -8,7 +8,7 @@
 <!-- Importing Custom Element -->
 <link rel="import" href="/vendor/skype-button/src/skype-button.html">
 
-<template bind="{{Skype}}">
+<template bind="{{Skyper}}">
 <section>
     <h4>Skyper</h4>
     <skype-button style="background-color:#0094ff"
