--- a/Apps/Skyper/Client/skyper-user.html
+++ b/Apps/Skyper/Client/skyper-user.html
@@ -7,7 +7,7 @@
 <script type="text/javascript" src="http://cdn.dev.skype.com/uri/skype-uri.js"></script>
 <!-- Importing Custom Element -->
 <link rel="import" href="/vendor/skype-button/src/skype-button.html">
-<template bind="{{Skype}}">
+<template bind="{{Skyper}}">
 	<section>
 	    <h1>{{ Name$ }}</h1>
 	    <input value="{{ SkypeId$ }}" >
