--- a/Apps/SuperCRM/Client/SuperCRM.html
+++ b/Apps/SuperCRM/Client/SuperCRM.html
@@ -1,5 +1,5 @@
-<template bind="{{dummyCRM}}">
-    <h1>DummyCRM</h1>
+<template bind="{{SuperCRM}}">
+    <h1>SuperCRM</h1>
     <h2>Favorite Customer:</h2>
     <template bind="{{FavoriteCustomer}}">
         <template is="imported-template" content="{{Html}}"></template>
