--- a/Apps/SuperCRM/Client/contact.html
+++ b/Apps/SuperCRM/Client/contact.html
@@ -1,18 +1,18 @@
 <link rel="import" href="vendor/gravatar-image/src/gravatar.html">
-<link rel="stylesheet" href="/css/dummyCRM.css">
+<link rel="stylesheet" href="/css/SuperCRM.css">
 
-<template bind="{{dummyCRM}}">
+<template bind="{{SuperCRM}}">
         <gravatar-image username="warpech@gmail.com"></gravatar-image>
-        <div class="dummyCRM">
+        <div class="SuperCRM">
             <label>Name<input value="{{ Name$ }}"></label>
         </div>
-	    <div class="dummyCRM">
+	    <div class="SuperCRM">
             <label>Title <input value="{{ Title$ }}"></label>
         </div>
-	    <div class="dummyCRM">
+	    <div class="SuperCRM">
             <label>Email <input value="{{ Email$ }}"></label>
         </div>
-	    <div class="dummyCRM">
+	    <div class="SuperCRM">
             <label>Company <select selectedIndex="{{CompanyIndex}}">
                 <option>Starcounter</option>
                            </select></label>
