--- a/Apps/SuperCRM/Client/menu.html
+++ b/Apps/SuperCRM/Client/menu.html
@@ -1,4 +1,4 @@
-﻿<template bind="{{dummyCRM}}">
+﻿<template bind="{{SuperCRM}}">
   <li><a href="/launcher/workspace/super-crm/contacts/add">Add contact</a></li>
   <li><a href="/launcher/workspace/super-crm/companies/add">Add company</a></li>
 </template>
