--- a/Apps/SuperCRM/Client/search-contacts.html
+++ b/Apps/SuperCRM/Client/search-contacts.html
@@ -1,7 +1,7 @@
-﻿<link rel="stylesheet" href="/css/dummyCRM.css">
+﻿<link rel="stylesheet" href="/css/SuperCRM.css">
 
-<template bind="{{dummyCRM}}">
-    <div class="dummyCRM">
+<template bind="{{SuperCRM}}">
+    <div class="SuperCRM">
         <h1>Contacts</h1>
         <ul>
             <template repeat="{{Contact in Contacts}}">
