--- a/Client/elements/dashboard/pj-dashboard.html
+++ b/Client/elements/dashboard/pj-dashboard.html
@@ -82,7 +82,7 @@
                     {
                         "desc": "Store"
                     }, {
-                        "desc": "dummyCRM"
+                        "desc": "SuperCRM"
                     }, {
                         "desc": "Skype"
                     }
