--- a/Apps/SuperCRM/Client/search-companies.html
+++ b/Apps/SuperCRM/Client/search-companies.html
@@ -1,11 +1,11 @@
-﻿<link rel="stylesheet" href="/css/dummyCRM.css">
+﻿<link rel="stylesheet" href="/css/SuperCRM.css">
 
-<template bind="{{dummyCRM}}">
-    <div class="dummyCRM">
+<template bind="{{SuperCRM}}">
+    <div class="SuperCRM">
         <h1>Companies</h1>
         <ul>
             <template repeat="{{Companies}}">
-                <template bind="{{dummyCRM}}">
+                <template bind="{{SuperCRM}}">
                     <li><a href="{{Uri}}">{{Name$}} | {{Contacts.length}} contacts
                         <!-- TODO fix PuppetJS span in a
                             <span>{{Name$}}</span>
