use SuperCRM.Company db class

--- a/Apps/SuperCRM/Client/company.html
+++ b/Apps/SuperCRM/Client/company.html
@@ -23,5 +23,6 @@
               <template is="imported-template" content="{{ Html }}"></template>
            </template>
         </div>
+        <label><button bind="{{ Save$ }}" onclick="setModelValue(this, null)">Save</button></label>
     </div>
 </template>
