--- a/Apps/SuperCRM/Client/menu.html
+++ b/Apps/SuperCRM/Client/menu.html
@@ -1,4 +1,5 @@
-﻿<template bind="{{SuperCRM}}">
+<template bind="{{SuperCRM}}">
   <li><a href="/launcher/workspace/super-crm/contacts/add">Add contact</a></li>
   <li><a href="/launcher/workspace/super-crm/companies/add">Add company</a></li>
+  <li><a href="/launcher/workspace/super-crm/delete-all-data">Delete all data</a></li>
 </template>
