--- a/Client/elements/dashboard/pj-dashboard.html
+++ b/Client/elements/dashboard/pj-dashboard.html
@@ -47,7 +47,7 @@
 
 
     <polymer-ui-toolbar>
-        <polymer-ui-icon-button icon="back"></polymer-ui-icon-button>
+        <a href="/"><polymer-ui-icon-button icon="menu" href="/"></polymer-ui-icon-button></a>
         <polymer-ui-field>
             <polymer-ui-icon icon="search"></polymer-ui-icon>
             <input placeholder="Search" value="{{search}}"/>
