--- a/Apps/SuperCRM/Client/company.html
+++ b/Apps/SuperCRM/Client/company.html
@@ -13,16 +13,18 @@
         }
     </style>
 
-    <div class="company">
+    
         <h1><input value="{{ Name$ }}"></h1>
         <label>Revenue
           <input type="number" value="{{ Revenue$ }}">
         </label>
         <div class="contacts">
+            <h2>Contacts</h2>
            <template repeat="{{ Contacts }}">
               <template is="imported-template" content="{{ Html }}"></template>
            </template>
+           <label><button bind="{{ AddContact$ }}" onclick="setModelValue(this, null)">Add a contact in {{Name$}}</button></label>
         </div>
         <label><button bind="{{ Save$ }}" onclick="setModelValue(this, null)">Save</button></label>
-    </div>
+        <puppet-morphUrl url="{{ RedirectUrl$ }}"></puppet-morphUrl>
 </template>
