consistent behavior after adding a new Contact or Company - redirect to its edit page

--- a/Apps/SuperCRM/Client/contact.html
+++ b/Apps/SuperCRM/Client/contact.html
@@ -32,5 +32,5 @@
 	    <div class="SuperCRM">
             <label><button bind="{{ Save$ }}" onclick="setModelValue(this, null)">Save</button></label>
         </div>
-	    
+        <puppet-morphUrl url="{{ RedirectUrl$ }}"></puppet-morphUrl>
 </template>
